--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "toastify-js": "^1.12.0"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "toastify-js": "^1.12.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "sonner": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
