--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "chart.js": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "react-icons": "^4.10.1",
-    "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.8.9",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
+    "react-table": "^7.8.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.2",
-    "react-scroll": "^1.8.9",
     "sonner": "^0.6.2",
     "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4"
